# Multi-Robot-Coordination-Framework

./: Dockerfile  README.md  coordination_master.py  docker-compose.yml  package.xml  requirements.txt  robot_agent.py  setup.py  system_monitor.py  task_generator.py
algorithms/: policy_gradient.py  q_learning.py
communication/: fault_tolerance.py  message_broker.py
config/: environment_config.yaml  robot_config.yaml  system_config.yaml
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md
launch/: simulation.launch.py  ulti_robot.launch.py
scripts/: run_tests.sh
src/algorithms/: auction_algorithm.py
src/communication/: ros_interface.py
src/tests/: integration_test.py  test_algorithms.py  test_communication.py  test_coordination.py
src/utils/: metrics.py
utils/: config.py  logger.py
